test/tests/operators/match/error_guarded_alternative_binding_path.txt
error: alternatives must bind the same names
 --> tests/operators/match/error_guarded_alternative_binding_path.tql:7:17
  |
7 |   {a: $x, ..} | {b: $x, ..} if $x > 1 => {
  |                 ^ 
  |
  = hint: split this arm into multiple arms
